--- a/architectural.html
+++ b/architectural.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Thomson Builders</title>
-    <meta name="description" content="meta description here">
+    <title>Architectural Excellence in Coimbatore | Thomson Constructions</title>
+    <meta name="description" content="Thomson Constructions in Coimbatore specializes in delivering architectural excellence across residential, commercial, and institutional projects. From innovative urban developments to heritage restorations, trust us to bring your architectural vision to life.">
 
     <!-- Favicon  -->
 
@@ -257,9 +257,7 @@
             <div class="website-serve-title text-center mb-4">
                 <h2>Thomson Construction <span> Best Services </span>
                 </h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam odit iusto magni explicabo iure
-                    asperiores earum iste. Sunt debitis suscipit ratione ut quasi non perferendis, nisi cupiditate eos,
-                    laborum sapiente?</p>
+                <p>At Thomson Constructions, we pride ourselves on being the go-to construction company in Coimbatore for commercial projects.</p>
             </div>
             <div class="website-serve-contents gap-4 website-serve-contents2">
                 <a href="residential.html" class="website-serve-boxs  website-serve-boxs2">
@@ -342,12 +340,7 @@
                     </button>
                 </div>
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, dolore. Accusantium quo, illo
-                    ipsam id vitae, rem amet distinctio aliquid praesentium tempore eum fugiat ipsa inventore assumenda
-                    earum reprehenderit? Asperiores itaque accusamus repellat molestiae similique! Veniam est quas
-                    libero! Commodi esse, tenetur adipisci suscipit nemo natus iure incidunt dolore dolorum laborum
-                    necessitatibus nisi reiciendis excepturi veritatis ad, enim quod voluptatem qui harum minus
-                    consectetur nostrum quo? Illum, minima. Dolor obcaecati deserunt esse consequuntur nulla.</p>
+                <p>Thomson Constructions is dedicated to architectural excellence, blending creativity with functionality in every project. Our diverse portfolio showcases innovative designs across residential, commercial, and institutional sectors. With meticulous attention to detail and a focus on sustainability, we bring architectural visions to life. From modern urban developments to timeless heritage restorations, our work reflects a commitment to quality and craftsmanship. Trust us to shape spaces that inspire, uplift, and endure. </p>
                 <ul>
                     <li>Best Services</li>
                     <li>Warranty</li>
@@ -420,9 +413,7 @@
         <div class="hire-choosing-container container">
             <div class="hire-choosing-title">
                 <h2>Why Choose <span>Thomson Construction</span></h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia repellendus accusamus autem ipsa
-                    aliquam nulla at tempora cumque, tenetur impedit fuga quis aspernatur optio id illum excepturi et
-                    commodi fugiat.</p>
+                <p>At Thomson Constructions, we pride ourselves on being the go-to construction company in Coimbatore for commercial projects.</p>
             </div>
             <div class="hireChoose-box-container">
                 <div class="hireChoose-box">
@@ -481,34 +472,28 @@
                             <div class="owl-item">
                                 <div class="industries-carousel-boxs">
                                     <h3 style="color: var(--color);"><span> Commercial Architect</span></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dolorum labore
-                                        doloribus corporis corrupti dolore perferendis odio obcaecati voluptatum nobis,
-                                        iusto quae, sequi optio quisquam, illo nisi ducimus consequuntur nihil!</p>
+                                    <p>Thomson Constructions excels in designing commercial spaces that blend creativity with practicality, ensuring a seamless fusion of form and function.</p>
                                 </div>
                             </div>
                             <div class="owl-item">
                                 <div class="industries-carousel-boxs">
                                     <h3 style="color: var(--color);"><span> Architectural Technician</span></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dolorum labore
-                                        doloribus corporis corrupti dolore perferendis odio obcaecati voluptatum nobis,
-                                        iusto quae, sequi optio quisquam, illo nisi ducimus consequuntur nihil!</p>
+                                    <p>Your architectural technician partner in Coimbatore ensures precision and efficiency in every project. Count on us for expert architectural and technical expertise, delivering innovative solutions tailored to your needs.</p>
                                 </div>
                             </div>
                             <div class="owl-item">
                                 <div class="industries-carousel-boxs">
                                     <h3 style="color: var(--color);"><span>Structural Designer
                                         </span></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dolorum labore
-                                        doloribus corporis corrupti dolore perferendis odio obcaecati voluptatum nobis,
-                                        iusto quae, sequi optio quisquam, illo nisi ducimus consequuntur nihil!</p>
+                                    <p>
+                                        Your structural design expert in Coimbatore ensures safety and integrity in every construction project. Trust our experienced team for innovative structural designs that meet your project requirements and exceed expectations.
+                                        </p>
                                 </div>
                             </div>
                             <div class="owl-item">
                                 <div class="industries-carousel-boxs">
                                     <h3 style="color: var(--color);"><span>Residential Architect</span></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dolorum labore
-                                        doloribus corporis corrupti dolore perferendis odio obcaecati voluptatum nobis,
-                                        iusto quae, sequi optio quisquam, illo nisi ducimus consequuntur nihil!</p>
+                                    <p>Your residential architecture specialists in Coimbatore craft dream homes with precision and flair. Count on us to design personalized living spaces that reflect your lifestyle and aspirations.</p>
                                 </div>
                             </div>
                         </div>
