--- a/commercial.html
+++ b/commercial.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Thomson Builders</title>
-    <meta name="description" content="meta description here">
+    <title> Premier Commercial Construction Services in Coimbatore | Thomson Constructions</title>
+    <meta name="description" content="Thomson Constructions in Coimbatore offers premier commercial construction services tailored to your business needs. From office buildings to retail spaces, trust us to deliver exceptional results with superior craftsmanship and attention to detail. ">
 
     <!-- Favicon  -->
 
@@ -253,9 +253,7 @@
             <div class="website-serve-title text-center mb-4">
                 <h2>Thomson Construction <span> Best Services </span>
                 </h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam odit iusto magni explicabo iure
-                    asperiores earum iste. Sunt debitis suscipit ratione ut quasi non perferendis, nisi cupiditate eos,
-                    laborum sapiente?</p>
+                <p>At Thomson Constructions, we pride ourselves on being the go-to construction company in Coimbatore for commercial projects.</p>
             </div>
             <div class="website-serve-contents gap-4 website-serve-contents2">
                 <a href="residential.html" class="website-serve-boxs website-serve-boxs2">
@@ -336,12 +334,7 @@
                     </button>
                 </div>
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, dolore. Accusantium quo, illo
-                    ipsam id vitae, rem amet distinctio aliquid praesentium tempore eum fugiat ipsa inventore assumenda
-                    earum reprehenderit? Asperiores itaque accusamus repellat molestiae similique! Veniam est quas
-                    libero! Commodi esse, tenetur adipisci suscipit nemo natus iure incidunt dolore dolorum laborum
-                    necessitatibus nisi reiciendis excepturi veritatis ad, enim quod voluptatem qui harum minus
-                    consectetur nostrum quo? Illum, minima. Dolor obcaecati deserunt esse consequuntur nulla.</p>
+                <p>We understand that each commercial project is unique, with its own set of requirements and challenges. That's why we work closely with our clients to understand their specific needs and goals, offering tailored solutions that align with their vision and budget. Whether you're looking to build from the ground up or renovate an existing space, we have the expertise and resources to bring your project to fruition.</p>
                 <ul>
                     <li>Best Services</li>
                     <li>Warranty</li>
@@ -412,9 +405,7 @@
         <div class="join-team-container container">
             <div class="join-team-title mb-5 text-center">
                 <h2>Two Types of <span><i>Commercial Construction</i> </span> services we provide </h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid dolores omnis recusandae iure
-                    laudantium ab! Vel ut quia culpa quisquam delectus laboriosam, inventore temporibus rem expedita eum
-                    eaque, consequuntur accusantium.</p>
+               
             </div>
             <div class="join-team-pills">
                 <ul class="nav nav-pills d-flex justify-content-center gap-3 flex-wrap mb-3" id="pills-tab"
@@ -439,14 +430,7 @@
                         <div class="join-fresher">
                             <div class="residen-services-content ">
                                 <h2>School <span>Buildings</span> </h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum eligendi in numquam
-                                    beatae quia ratione exercitationem iste aperiam, vel molestias commodi impedit sunt?
-                                    Officiis et modi perspiciatis? Aperiam veritatis cupiditate debitis delectus, sunt
-                                    et ipsam molestias nesciunt maiores. Nulla minima vero sapiente eum inventore sint
-                                    nobis, voluptatem cum vel expedita, aliquid distinctio sit tempora repellat debitis
-                                    ullam modi velit. Perspiciatis error rerum placeat, ullam officiis cupiditate
-                                    similique, quibusdam, quod ex ipsam reprehenderit dolorem possimus! Dolorum, ipsa
-                                    numquam? Nostrum, accusantium! Ipsam.</p>
+                                <p>Thomson Constructions brings innovation and expertise to school building projects in Coimbatore. Our team is dedicated to creating safe, functional, and inspiring learning environments. From modern classrooms to state-of-the-art facilities, we ensure every aspect of the school building meets the highest standards of quality and durability. Trust us to construct spaces where education thrives and futures are built.</p>
 
                                 <ul>
                                     <li>Site Survay</li>
@@ -465,14 +449,7 @@
                         <div class="join-fresher row">
                             <div class="residen-services-content ">
                                 <h2>Churches <span>Building</span> </h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum eligendi in numquam
-                                    beatae quia ratione exercitationem iste aperiam, vel molestias commodi impedit sunt?
-                                    Officiis et modi perspiciatis? Aperiam veritatis cupiditate debitis delectus, sunt
-                                    et ipsam molestias nesciunt maiores. Nulla minima vero sapiente eum inventore sint
-                                    nobis, voluptatem cum vel expedita, aliquid distinctio sit tempora repellat debitis
-                                    ullam modi velit. Perspiciatis error rerum placeat, ullam officiis cupiditate
-                                    similique, quibusdam, quod ex ipsam reprehenderit dolorem possimus! Dolorum, ipsa
-                                    numquam? Nostrum, accusantium! Ipsam.</p>
+                                <p>At Thomson Constructions, we understand the sacred significance of churches. Our expertise in church construction extends beyond bricks and mortar; we build sanctuaries that inspire reverence and foster community. With attention to architectural detail and spiritual ambiance, we create spaces that reflect the faith and values of your congregation. Trust us to construct churches that stand as enduring symbols of faith, unity, and hope.</p>
 
                                 <ul>
                                     <li>Site Survay</li>
@@ -505,9 +482,7 @@
         <div class="hire-choosing-container container">
             <div class="hire-choosing-title">
                 <h2>Why Choose <span>Thomson Construction</span></h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia repellendus accusamus autem ipsa
-                    aliquam nulla at tempora cumque, tenetur impedit fuga quis aspernatur optio id illum excepturi et
-                    commodi fugiat.</p>
+                <p>Choose Thomson Constructions in Coimbatore for unrivalled expertise and a commitment to exceeding your expectations. Experience superior quality, reliability, and personalized service tailored to your construction needs.</p>
             </div>
             <div class="hireChoose-box-container">
                 <div class="hireChoose-box">
@@ -567,28 +542,28 @@
                                 <div class="industries-carousel-boxs">
                                     <h3 style="color: var(--color);"><span> 
                                         Office buildings</span></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dolorum labore doloribus corporis corrupti dolore perferendis odio obcaecati voluptatum nobis, iusto quae, sequi optio quisquam, illo nisi ducimus consequuntur nihil!</p>
+                                    <p>Thomson Constructions delivers modern office buildings that inspire productivity and collaboration. From sleek designs to sustainable features, we create workspaces tailored to your business needs.</p>
                                 </div>
                             </div>
                             <div class="owl-item">
                                 <div class="industries-carousel-boxs">
                                     <h3 style="color: var(--color);"><span> 
                                         Restaurant</span></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dolorum labore doloribus corporis corrupti dolore perferendis odio obcaecati voluptatum nobis, iusto quae, sequi optio quisquam, illo nisi ducimus consequuntur nihil!</p>
+                                    <p>Thomson Constructions crafts inviting restaurants that blend ambiance with functionality, creating spaces where culinary excellence thrives. From intimate bistros to bustling eateries, we design environments that leave a lasting impression on diners.</p>
                                 </div>
                             </div>
                             <div class="owl-item">
                                 <div class="industries-carousel-boxs">
                                     <h3 style="color: var(--color);"><span>
                                         Institutions</span></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dolorum labore doloribus corporis corrupti dolore perferendis odio obcaecati voluptatum nobis, iusto quae, sequi optio quisquam, illo nisi ducimus consequuntur nihil!</p>
+                                    <p>Thomson Constructions specializes in building institutions that foster learning, innovation, and community engagement. From educational campuses to cultural centres, we create spaces that empower growth and inspire excellence.</p>
                                 </div>
                             </div>
                             <div class="owl-item">
                                 <div class="industries-carousel-boxs">
                                     <h3 style="color: var(--color);"><span>
                                         Shopping malls</span></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dolorum labore doloribus corporis corrupti dolore perferendis odio obcaecati voluptatum nobis, iusto quae, sequi optio quisquam, illo nisi ducimus consequuntur nihil!</p>
+                                    <p>Thomson Constructions specializes in crafting dynamic shopping malls that redefine retail experiences. From cutting-edge designs to seamless functionality, we create destinations where shopping, entertainment, and leisure converge.</p>
                                 </div>
                             </div>
                         </div>
