--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Thomson Builders</title>
-    <meta name="description" content="meta description here">
+    <title> Get in Touch with Thomson Constructions | Contact Us Today</title>
+    <meta name="description" content="Contact Thomson Constructions today for expert construction services in Coimbatore. Whether you have questions about our projects or want to discuss your construction needs, our team is here to help. Reach out to us now for personalized assistance.">
 
     <!-- Favicon  -->
 
