--- a/gallery.html
+++ b/gallery.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Thomson Builders</title>
-    <meta name="description" content="meta description here">
+    <title>Top House Maintenance Services</title>
+    <meta name="description" content="Look into Thomson Builders for top-notch home maintenance services in your area. We are the dependable and high-quality home maintenance business you can rely on.">
 
     <!-- Favicon  -->
 
