--- a/interior.html
+++ b/interior.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Thomson Builders</title>
-    <meta name="description" content="meta description here">
-
+    <title> Transform Your Space with Thomson Constructions' Interior Design Services in Coimbatore</title>
+    <meta name="description" content="Elevate your living or working environment with Thomson Constructions' expert interior design solutions in Coimbatore. From concept to execution, trust us to create spaces that inspire and delight, tailored to your taste and needs.">
     <!-- Favicon  -->
 
 
@@ -255,9 +254,7 @@
             <div class="website-serve-title text-center mb-4">
                 <h2>Thomson Construction <span> Best Services </span>
                 </h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam odit iusto magni explicabo iure
-                    asperiores earum iste. Sunt debitis suscipit ratione ut quasi non perferendis, nisi cupiditate eos,
-                    laborum sapiente?</p>
+                <p>At Thomson Constructions, we pride ourselves on being the go-to construction company in Coimbatore for commercial projects.</p>
             </div>
             <div class="website-serve-contents gap-4 website-serve-contents2">
                 <a href="residential.html" class="website-serve-boxs website-serve-boxs2">
@@ -341,12 +338,7 @@
                     </button>
                 </div>
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, dolore. Accusantium quo, illo
-                    ipsam id vitae, rem amet distinctio aliquid praesentium tempore eum fugiat ipsa inventore assumenda
-                    earum reprehenderit? Asperiores itaque accusamus repellat molestiae similique! Veniam est quas
-                    libero! Commodi esse, tenetur adipisci suscipit nemo natus iure incidunt dolore dolorum laborum
-                    necessitatibus nisi reiciendis excepturi veritatis ad, enim quod voluptatem qui harum minus
-                    consectetur nostrum quo? Illum, minima. Dolor obcaecati deserunt esse consequuntur nulla.</p>
+                <p>With a keen eye for detail and a passion for innovation, we offer a comprehensive range of interior design services, including space planning, furniture selection, colour consultation, lighting design, and more. Whether you're looking to revamp your home, office, or commercial space, we have the expertise and creativity to bring your vision to life. At Thomson Constructions, we believe that great design is about more than just aesthetics; it's about creating environments that function seamlessly and enrich the lives of those who inhabit them.</p>
                 <ul>
                     <li>Best Services</li>
                     <li>Warranty</li>
@@ -510,9 +502,7 @@
         <div class="hire-choosing-container container">
             <div class="hire-choosing-title">
                 <h2>Why Choose <span>Thomson Construction</span></h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia repellendus accusamus autem ipsa
-                    aliquam nulla at tempora cumque, tenetur impedit fuga quis aspernatur optio id illum excepturi et
-                    commodi fugiat.</p>
+                <p>Choose Thomson Constructions in Coimbatore for unrivalled expertise and a commitment to exceeding your expectations. Experience superior quality, reliability, and personalized service tailored to your construction needs.</p>
             </div>
             <div class="hireChoose-box-container">
                 <div class="hireChoose-box">
@@ -572,34 +562,26 @@
                                 <div class="industries-carousel-boxs">
                                     <h3 style="color: var(--color);"><span>
                                             Traditional</span></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dolorum labore
-                                        doloribus corporis corrupti dolore perferendis odio obcaecati voluptatum nobis,
-                                        iusto quae, sequi optio quisquam, illo nisi ducimus consequuntur nihil!</p>
+                                    <p>Thomson Constructions honours tradition in every interior design project, infusing timeless elegance into modern spaces. Experience the charm of traditional design with our expert touch, creating environments that evoke comfort and heritage.</p>
                                 </div>
                             </div>
                             <div class="owl-item">
                                 <div class="industries-carousel-boxs">
                                     <h3 style="color: var(--color);"><span>
                                             Industrial</span></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dolorum labore
-                                        doloribus corporis corrupti dolore perferendis odio obcaecati voluptatum nobis,
-                                        iusto quae, sequi optio quisquam, illo nisi ducimus consequuntur nihil!</p>
+                                    <p>Thomson Constructions brings an industrial edge to interior design, blending raw materials with sleek finishes for a modern aesthetic. Embrace the rugged beauty of industrial design with our innovative approach, transforming spaces into urban sanctuaries.</p>
                                 </div>
                             </div>
                             <div class="owl-item">
                                 <div class="industries-carousel-boxs">
                                     <h3 style="color: var(--color);"><span> Modern interior design</span></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dolorum labore
-                                        doloribus corporis corrupti dolore perferendis odio obcaecati voluptatum nobis,
-                                        iusto quae, sequi optio quisquam, illo nisi ducimus consequuntur nihil!</p>
+                                    <p>Thomson Constructions redefines modern interior design, emphasizing clean lines, minimalist decor, and innovative use of space. Experience the epitome of contemporary living with our modern interior design solutions, where simplicity meets sophistication.</p>
                                 </div>
                             </div>
                             <div class="owl-item">
                                 <div class="industries-carousel-boxs">
                                     <h3 style="color: var(--color);"><span>Midcentury</span></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dolorum labore
-                                        doloribus corporis corrupti dolore perferendis odio obcaecati voluptatum nobis,
-                                        iusto quae, sequi optio quisquam, illo nisi ducimus consequuntur nihil!</p>
+                                    <p>Thomson Constructions captures the timeless allure of mid century modern design, blending iconic furniture pieces with sleek lines and organic shapes. Embrace the retro-chic aesthetic with our mid-century interior design expertise, creating spaces that exude warmth and nostalgia.</p>
                                 </div>
                             </div>
                         </div>
