--- a/projects.html
+++ b/projects.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Thomson Builders</title>
-    <meta name="description" content="meta description here">
+    <title>House Maintenance Services</title>
+    <meta name="description" content="For excellent home maintenance services, look no further than Thomson Builders. For long-lasting home quality, our specialists excel at thorough workhouse maintenance.">
 
     <!-- Favicon  -->
 
@@ -271,9 +271,7 @@
                             </div>
                             <div class="case-heading">
                                 <h2>Construction work in Erode</h2>
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis fugit ratione ab
-                                    est mollitia iusto, at dicta necessitatibus incidunt quo pariatur iure fugiat omnis
-                                    quam error adipisci repudiandae aliquam consequuntur!</p>
+                                <p>Welcome to Thomson Builders, Erode's top option for construction services! Our specialty is turning your dreams of building into reality while placing the highest priority on quality at every stage. For your home projects, our talented staff guarantees painstaking planning and faultless execution, providing unmatched craftsmanship.</p>
                             </div>
                         </div>
                     </div>
@@ -299,9 +297,7 @@
                             </div>
                             <div class="case-heading">
                                 <h2>Construction work in Erode</h2>
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis fugit ratione ab
-                                    est mollitia iusto, at dicta necessitatibus incidunt quo pariatur iure fugiat omnis
-                                    quam error adipisci repudiandae aliquam consequuntur!</p>
+                                <p>Thomson Builders is pleased to provide full-service home maintenance services in your area in addition to building. We go above and beyond as your dependable partner to keep your house in top shape. Whether it's little repairs or extensive maintenance, our skilled staff is committed to providing high-quality home maintenance services.</p>
                             </div>
                         </div>
                     </div>
@@ -327,9 +323,7 @@
                             </div>
                             <div class="case-heading">
                                 <h2>Architectural work in Madurai</h2>
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis fugit ratione ab
-                                    est mollitia iusto, at dicta necessitatibus incidunt quo pariatur iure fugiat omnis
-                                    quam error adipisci repudiandae aliquam consequuntur!</p>
+                                <p>Experience the ease of Thomson Builders, where superior architecture blends smoothly with knowledgeable home maintenance services. With us as your dependable partners in creating one-of-a-kind architectural marvels and maintaining the beauty and usefulness of your home, you can enhance your Madurai living experience. Select Thomson Builders for superior architectural design and local home upkeep services.</p>
                             </div>
                         </div>
                     </div>
@@ -362,9 +356,7 @@
                             </div>
                             <div class="case-heading">
                                 <h2>Exterior work in residential building at Coimbatore</h2>
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis fugit ratione ab
-                                    est mollitia iusto, at dicta necessitatibus incidunt quo pariatur iure fugiat omnis
-                                    quam error adipisci repudiandae aliquam consequuntur!</p>
+                                <p>At Thomson Builders, we provide comprehensive home maintenance solutions in addition to standard services. We are your dependable partner in maintaining the best possible condition for the outside of your house, from minor repairs to extensive overhauls. Entrust all aspects of exterior work and house maintenance services to our skilled team, who will ensure your pleasure at every step of the way.</p>
                             </div>
                         </div>
                     </div>
@@ -388,9 +380,7 @@
                             </div>
                             <div class="case-heading">
                                 <h2>Plastering work in Ariyalur</h2>
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis fugit ratione ab
-                                    est mollitia iusto, at dicta necessitatibus incidunt quo pariatur iure fugiat omnis
-                                    quam error adipisci repudiandae aliquam consequuntur!</p>
+                                <p>Welcome to Thomson Builders, the best place in Ariyalur for flawless plastering services! We are dedicated to providing top-notch plastering services that will improve your home's longevity and aesthetic appeal. Our knowledgeable staff guarantees accurate implementation, providing excellent craftsmanship for all of your plastering jobs.</p>
                             </div>
                         </div>
                     </div>
@@ -414,9 +404,7 @@
                             </div>
                             <div class="case-heading">
                                 <h2>Construction work in Erode</h2>
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis fugit ratione ab
-                                    est mollitia iusto, at dicta necessitatibus incidunt quo pariatur iure fugiat omnis
-                                    quam error adipisci repudiandae aliquam consequuntur!</p>
+                                <p>At Thomson Builders, our services extend beyond building. Additionally, we provide thorough house maintenance services close to you. Our goal as your neighbourhood house maintenance business is to keep your house in top shape. Our staff is here to fulfill your demands with dependable and competent services, whether they include little fixes or extensive upkeep.</p>
                             </div>
                         </div>
                     </div>
