--- a/renovation.html
+++ b/renovation.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Thomson Builders</title>
-    <meta name="description" content="meta description here">
+    <title>Renovate Your Space with Thomson Constructions' Expert Renovation Services in Coimbatore</title>
+    <meta name="description" content="Thomson Constructions offers expert renovation services in Coimbatore to transform your space into a masterpiece. From residential refurbishments to commercial upgrades.">
 
     <!-- Favicon  -->
 
@@ -253,9 +253,7 @@
             <div class="website-serve-title text-center mb-4">
                 <h2>Thomson Construction <span> Best Services </span>
                 </h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam odit iusto magni explicabo iure
-                    asperiores earum iste. Sunt debitis suscipit ratione ut quasi non perferendis, nisi cupiditate eos,
-                    laborum sapiente?</p>
+                <p>At Thomson Constructions, we pride ourselves on being the go-to construction company in Coimbatore for commercial projects.</p>
             </div>
             <div class="website-serve-contents gap-4 website-serve-contents2">
                 <a href="residential.html" class="website-serve-boxs website-serve-boxs2">
@@ -336,12 +334,7 @@
                     </button>
                 </div>
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, dolore. Accusantium quo, illo
-                    ipsam id vitae, rem amet distinctio aliquid praesentium tempore eum fugiat ipsa inventore assumenda
-                    earum reprehenderit? Asperiores itaque accusamus repellat molestiae similique! Veniam est quas
-                    libero! Commodi esse, tenetur adipisci suscipit nemo natus iure incidunt dolore dolorum laborum
-                    necessitatibus nisi reiciendis excepturi veritatis ad, enim quod voluptatem qui harum minus
-                    consectetur nostrum quo? Illum, minima. Dolor obcaecati deserunt esse consequuntur nulla.</p>
+                <p>Welcome to Thomson Constructions, your premier destination for renovation services in Coimbatore. With our team of skilled professionals and commitment to excellence, we specialize in turning outdated spaces into modern marvels through our expert renovation services. Our renovation solutions cover a wide range of projects, including residential refurbishments, commercial upgrades, and institutional renovations. Whether you're looking to revitalize your home, office, or other property, we have the expertise and resources to bring your vision to life.</p>
                 <ul>
                     <li>Best Services</li>
                     <li>Warranty</li>
@@ -505,9 +498,7 @@
         <div class="hire-choosing-container container">
             <div class="hire-choosing-title">
                 <h2>Why Choose <span>Thomson Construction</span></h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia repellendus accusamus autem ipsa
-                    aliquam nulla at tempora cumque, tenetur impedit fuga quis aspernatur optio id illum excepturi et
-                    commodi fugiat.</p>
+                <p>At Thomson Constructions, we pride ourselves on being the go-to construction company in Coimbatore for commercial projects.</p>
             </div>
             <div class="hireChoose-box-container">
                 <div class="hireChoose-box">
@@ -566,25 +557,25 @@
                             <div class="owl-item">
                                 <div class="industries-carousel-boxs">
                                     <h3 style="color: var(--color);"><span> Bathroom remodeling</span></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dolorum labore doloribus corporis corrupti dolore perferendis odio obcaecati voluptatum nobis, iusto quae, sequi optio quisquam, illo nisi ducimus consequuntur nihil!</p>
+                                    <p>Thomson Constructions specializes in bathroom remolding, creating luxurious and functional spaces tailored to your needs and style. Elevate your daily routine with our expert remolding services, transforming your bathroom into a sanctuary of relaxation and comfort.</p>
                                 </div>
                             </div>
                             <div class="owl-item">
                                 <div class="industries-carousel-boxs">
                                     <h3 style="color: var(--color);"><span> Kitchen remodeling</span></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dolorum labore doloribus corporis corrupti dolore perferendis odio obcaecati voluptatum nobis, iusto quae, sequi optio quisquam, illo nisi ducimus consequuntur nihil!</p>
+                                    <p>Thomson Constructions specializes in kitchen remodeling, creating functional and stylish spaces that inspire culinary creativity. Transform your kitchen into the heart of your home with our expert remodeling services, tailored to your tastes and lifestyle.</p>
                                 </div>
                             </div>
                             <div class="owl-item">
                                 <div class="industries-carousel-boxs">
                                     <h3 style="color: var(--color);"><span>Basement remodeling</span></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dolorum labore doloribus corporis corrupti dolore perferendis odio obcaecati voluptatum nobis, iusto quae, sequi optio quisquam, illo nisi ducimus consequuntur nihil!</p>
+                                    <p>Revitalize your basement with Thomson Constructions' expert remolding services, turning underutilized spaces into functional and inviting areas. From game rooms to home theatres, trust us to transform your basement into a versatile and stylish extension of your home.</p>
                                 </div>
                             </div>
                             <div class="owl-item">
                                 <div class="industries-carousel-boxs">
                                     <h3 style="color: var(--color);"><span>Garage remodeling</span></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dolorum labore doloribus corporis corrupti dolore perferendis odio obcaecati voluptatum nobis, iusto quae, sequi optio quisquam, illo nisi ducimus consequuntur nihil!</p>
+                                    <p>Thomson Constructions'remolding expertise, converting it into a functional and organized space. Transform your garage into a workshop, home gym, or additional living area with our innovativeremolding solutions tailored to your needs.</p>
                                 </div>
                             </div>
                         </div>
