--- a/residential.html
+++ b/residential.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Thomson Builders</title>
-    <meta name="description" content="meta description here">
+    <title> Luxury Residential Properties in Coimbatore, Thomson Builders</title>
+    <meta name="description" content="Explore Thomson Builders' exceptional residential properties in Coimbatore, crafted with meticulous attention to detail. Find your perfect home with us today and experience unmatched comfort and elegance.">
 
     <!-- Favicon  -->
 
@@ -230,10 +230,9 @@
                     <div class="swiper-slide">
                         <img src="assets/images/banner/1.jpg" alt="Thomson-construction-banner">
                         <div class="banner-content">
-                            <h4>Trusted construction company</h4>
-                            <h1>Build your dream <br>house <span>today!</span></h1>
-                            <p>Everything your
-                                construction needs is already here! <br>Buildex made for industrial solution!</p>
+                            <h4>Building beautiful homes one dream at a time.</h4>
+                            <h1>BEST HOME DEVELOPERS  <br> <span>COIMBATORE</span></h1>
+                            <p>Discover your dream home with Thomson Builders in Coimbatore. <br> Your ideal residential sanctuary awaits!</p>
                         </div>
                     </div>
 
@@ -250,11 +249,9 @@
     <section class="website-serve-section">
         <div class="website-serve-container container">
             <div class="website-serve-title text-center mb-4">
-                <h2>Thomson Construction <span> Best Services </span>
+                <h2>GOOD BUILDERS IN  <span>COIMBATORE </span>
                 </h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam odit iusto magni explicabo iure
-                    asperiores earum iste. Sunt debitis suscipit ratione ut quasi non perferendis, nisi cupiditate eos,
-                    laborum sapiente?</p>
+                <p>Our dedication is to transform your vision of a dream home into reality. With a commitment to quality and innovation, we strive to exceed your expectations at every step of the way.</p>
             </div>
             <div class="website-serve-contents gap-4 website-serve-contents2">
                 <a href="residential.html" class="website-serve-boxs tt2 website-serve-boxs2">
@@ -335,12 +332,7 @@
                     </button>
                 </div>
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, dolore. Accusantium quo, illo
-                    ipsam id vitae, rem amet distinctio aliquid praesentium tempore eum fugiat ipsa inventore assumenda
-                    earum reprehenderit? Asperiores itaque accusamus repellat molestiae similique! Veniam est quas
-                    libero! Commodi esse, tenetur adipisci suscipit nemo natus iure incidunt dolore dolorum laborum
-                    necessitatibus nisi reiciendis excepturi veritatis ad, enim quod voluptatem qui harum minus
-                    consectetur nostrum quo? Illum, minima. Dolor obcaecati deserunt esse consequuntur nulla.</p>
+                <p>The residential construction sector in Coimbatore is thriving, distinguished by creativity and fine craftsmanship. Builders in the area are producing homes that suit a variety of tastes and lifestyles by fusing modern and traditional design elements. There is something for everyone in the city's burgeoning real estate market, which offers a variety of options, from opulent villas to modern apartments. Coimbatore is leading the way in residential construction as demand grows, offering both investors and homeowners a promising future. </p>
                 <ul>
                     <li>Best Services</li>
                     <li>Warranty</li>
@@ -411,9 +403,7 @@
         <div class="join-team-container container">
             <div class="join-team-title mb-5 text-center">
                 <h2>Two Types of <span><i>Residential Construction</i> </span> services we provide </h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid dolores omnis recusandae iure
-                    laudantium ab! Vel ut quia culpa quisquam delectus laboriosam, inventore temporibus rem expedita eum
-                    eaque, consequuntur accusantium.</p>
+                
             </div>
             <div class="join-team-pills">
                 <ul class="nav nav-pills d-flex justify-content-center gap-3 flex-wrap mb-3" id="pills-tab"
@@ -438,14 +428,7 @@
                         <div class="join-fresher">
                             <div class="residen-services-content ">
                                 <h2>Individual <span>Villas</span> </h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum eligendi in numquam
-                                    beatae quia ratione exercitationem iste aperiam, vel molestias commodi impedit sunt?
-                                    Officiis et modi perspiciatis? Aperiam veritatis cupiditate debitis delectus, sunt
-                                    et ipsam molestias nesciunt maiores. Nulla minima vero sapiente eum inventore sint
-                                    nobis, voluptatem cum vel expedita, aliquid distinctio sit tempora repellat debitis
-                                    ullam modi velit. Perspiciatis error rerum placeat, ullam officiis cupiditate
-                                    similique, quibusdam, quod ex ipsam reprehenderit dolorem possimus! Dolorum, ipsa
-                                    numquam? Nostrum, accusantium! Ipsam.</p>
+                                <p>Indulge in the epitome of luxury living with our individual villa construction services. From meticulously designed floor plans to exquisite finishes, each detail is crafted to exceed your expectations. Our team of seasoned professionals ensures a seamless journey from conceptualization to completion, guiding you every step of the way. Immerse yourself in unparalleled comfort and sophistication as we bring your vision of the perfect home to life. Elevate your lifestyle with a bespoke villa that reflects your personality and aspirations, tailored to perfection by Thomson Constructions.</p>
 
                                 <ul>
                                     <li>Site Survay</li>
@@ -464,14 +447,7 @@
                         <div class="join-fresher row">
                             <div class="residen-services-content ">
                                 <h2>Farm <span>House</span> </h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum eligendi in numquam
-                                    beatae quia ratione exercitationem iste aperiam, vel molestias commodi impedit sunt?
-                                    Officiis et modi perspiciatis? Aperiam veritatis cupiditate debitis delectus, sunt
-                                    et ipsam molestias nesciunt maiores. Nulla minima vero sapiente eum inventore sint
-                                    nobis, voluptatem cum vel expedita, aliquid distinctio sit tempora repellat debitis
-                                    ullam modi velit. Perspiciatis error rerum placeat, ullam officiis cupiditate
-                                    similique, quibusdam, quod ex ipsam reprehenderit dolorem possimus! Dolorum, ipsa
-                                    numquam? Nostrum, accusantium! Ipsam.</p>
+                                <p>Experience the charm of countryside living with our farmhouse construction solutions. Our team specializes in blending rustic elegance with modern amenities to create your ideal retreat. From sprawling estates to cozy hideaways, each farmhouse is meticulously crafted to harmonize with its natural surroundings. Embrace tranquilly and escape the hustle and bustle of city life in your own private oasis. Let Thomson Constructions build your dream farmhouse, where memories are made and serenity abounds.</p>
 
                                 <ul>
                                     <li>Site Survay</li>
@@ -504,9 +480,7 @@
         <div class="hire-choosing-container container">
             <div class="hire-choosing-title">
                 <h2>Why Choose <span>Thomson Construction</span></h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia repellendus accusamus autem ipsa
-                    aliquam nulla at tempora cumque, tenetur impedit fuga quis aspernatur optio id illum excepturi et
-                    commodi fugiat.</p>
+                <p>Choose Thomson Constructions in Coimbatore for unrivalled expertise and a commitment to exceeding your expectations. Experience superior quality, reliability, and personalized service tailored to your construction needs.</p>
             </div>
             <div class="hireChoose-box-container">
                 <div class="hireChoose-box">
@@ -565,33 +539,25 @@
                             <div class="owl-item">
                                 <div class="industries-carousel-boxs">
                                     <h3 style="color: var(--color);"><span> Single family homes</span></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dolorum labore
-                                        doloribus corporis corrupti dolore perferendis odio obcaecati voluptatum nobis,
-                                        iusto quae, sequi optio quisquam, illo nisi ducimus consequuntur nihil!</p>
+                                    <p>Experience the essence of home with Thomson Constructions' single-family residences in Coimbatore. Our homes offer personalized designs, superior craftsmanship, and modern amenities, ensuring comfort and functionality for your family. Trust us to build your dream home where cherished memories are made and futures are shaped.</p>
                                 </div>
                             </div>
                             <div class="owl-item">
                                 <div class="industries-carousel-boxs">
-                                    <h3 style="color: var(--color);"><span> Multifamily</span></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dolorum labore
-                                        doloribus corporis corrupti dolore perferendis odio obcaecati voluptatum nobis,
-                                        iusto quae, sequi optio quisquam, illo nisi ducimus consequuntur nihil!</p>
+                                    <h3 style="color: var(--color);"><span> Multi-family</span></h3>
+                                    <p>Unlock the potential of multi-family living with Thomson Constructions in Coimbatore. Our expert team specializes in creating dynamic, modern spaces designed to foster community and elevate lifestyles. Trust us to deliver innovative designs, superior craftsmanship, and unparalleled value in every multi-family project.</p>
                                 </div>
                             </div>
                             <div class="owl-item">
                                 <div class="industries-carousel-boxs">
-                                    <h3 style="color: var(--color);"><span>Townhouse</span></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dolorum labore
-                                        doloribus corporis corrupti dolore perferendis odio obcaecati voluptatum nobis,
-                                        iusto quae, sequi optio quisquam, illo nisi ducimus consequuntur nihil!</p>
+                                    <h3 style="color: var(--color);"><span>Town-house</span></h3>
+                                    <p>Elevate your urban living experience with Thomson Constructions in Coimbatore. Our townhouse designs blend contemporary aesthetics with functional spaces, offering a perfect balance of style and convenience. Trust us to create your ideal urban sanctuary, where modern living meets timeless elegance.</p>
                                 </div>
                             </div>
                             <div class="owl-item">
                                 <div class="industries-carousel-boxs">
                                     <h3 style="color: var(--color);"><span>Apartments</span></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dolorum labore
-                                        doloribus corporis corrupti dolore perferendis odio obcaecati voluptatum nobis,
-                                        iusto quae, sequi optio quisquam, illo nisi ducimus consequuntur nihil!</p>
+                                    <p>Discover unmatched comfort and sophistication with Thomson Constructions' apartments in Coimbatore. Our meticulously crafted living spaces offer contemporary design, premium amenities, and a vibrant community atmosphere. Experience urban living at its finest with our expertly designed apartments tailored to your lifestyle.</p>
                                 </div>
                             </div>
                         </div>
