--- a/maintenance.html
+++ b/maintenance.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Thomson Builders</title>
-    <meta name="description" content="meta description here">
+    <title> Comprehensive Maintenance Solutions by Thomson Constructions in Coimbatore</title>
+    <meta name="description" content="Thomson Constructions offers comprehensive maintenance services in Coimbatore to ensure the longevity and functionality of your properties. From routine upkeep to emergency repairs, trust us to keep your projects in optimal condition.">
 
     <!-- Favicon  -->
 
@@ -254,9 +254,7 @@
             <div class="website-serve-title text-center mb-4">
                 <h2>Thomson Construction <span> Best Services </span>
                 </h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam odit iusto magni explicabo iure
-                    asperiores earum iste. Sunt debitis suscipit ratione ut quasi non perferendis, nisi cupiditate eos,
-                    laborum sapiente?</p>
+                <p>At Thomson Constructions, we pride ourselves on being the go-to construction company in Coimbatore for commercial projects.</p>
             </div>
             <div class="website-serve-contents gap-4 website-serve-contents2">
                 <a href="residential.html" class="website-serve-boxs website-serve-boxs2">
@@ -340,12 +338,7 @@
                     </button>
                 </div>
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, dolore. Accusantium quo, illo
-                    ipsam id vitae, rem amet distinctio aliquid praesentium tempore eum fugiat ipsa inventore assumenda
-                    earum reprehenderit? Asperiores itaque accusamus repellat molestiae similique! Veniam est quas
-                    libero! Commodi esse, tenetur adipisci suscipit nemo natus iure incidunt dolore dolorum laborum
-                    necessitatibus nisi reiciendis excepturi veritatis ad, enim quod voluptatem qui harum minus
-                    consectetur nostrum quo? Illum, minima. Dolor obcaecati deserunt esse consequuntur nulla.</p>
+                <p>Welcome to Thomson Constructions, your trusted partner for maintenance work in Coimbatore. With our dedicated team of experts, we offer a wide range of services to address all your maintenance needs, ensuring your projects remain in top condition year-round. Our maintenance solutions cover everything from regular inspections and preventive maintenance to emergency repairs and renovations. Whether it's a residential, commercial, or institutional project, we have the knowledge and resources to keep it running smoothly.</p>
                 <ul>
                     <li>Best Services</li>
                     <li>Warranty</li>
@@ -509,9 +502,7 @@
         <div class="hire-choosing-container container">
             <div class="hire-choosing-title">
                 <h2>Why Choose <span>Thomson Construction</span></h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia repellendus accusamus autem ipsa
-                    aliquam nulla at tempora cumque, tenetur impedit fuga quis aspernatur optio id illum excepturi et
-                    commodi fugiat.</p>
+                <p>At Thomson Constructions, we pride ourselves on being the go-to construction company in Coimbatore for commercial projects.</p>
             </div>
             <div class="hireChoose-box-container">
                 <div class="hireChoose-box">
@@ -570,33 +561,25 @@
                             <div class="owl-item">
                                 <div class="industries-carousel-boxs">
                                     <h3 style="color: var(--color);"><span> Preventive maintenance</span></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dolorum labore
-                                        doloribus corporis corrupti dolore perferendis odio obcaecati voluptatum nobis,
-                                        iusto quae, sequi optio quisquam, illo nisi ducimus consequuntur nihil!</p>
+                                    <p>Thomson Constructions offers preventive maintenance solutions, proactively addressing potential issues to ensure the longevity and efficiency of your properties. Count on us to implement scheduled inspections and routine maintenance tasks.</p>
                                 </div>
                             </div>
                             <div class="owl-item">
                                 <div class="industries-carousel-boxs">
                                     <h3 style="color: var(--color);"><span> Corrective maintenance</span></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dolorum labore
-                                        doloribus corporis corrupti dolore perferendis odio obcaecati voluptatum nobis,
-                                        iusto quae, sequi optio quisquam, illo nisi ducimus consequuntur nihil!</p>
+                                    <p>Thomson Constructions provides corrective maintenance services, swiftly addressing issues to restore your properties to optimal condition. Trust our experienced team to diagnose and rectify problems efficiently.</p>
                                 </div>
                             </div>
                             <div class="owl-item">
                                 <div class="industries-carousel-boxs">
                                     <h3 style="color: var(--color);"><span>Building maintenance</span></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dolorum labore
-                                        doloribus corporis corrupti dolore perferendis odio obcaecati voluptatum nobis,
-                                        iusto quae, sequi optio quisquam, illo nisi ducimus consequuntur nihil!</p>
+                                    <p>Thomson Constructions offers comprehensive building maintenance services, ensuring the ongoing integrity and functionality of your properties. From routine inspections to emergency repairs, trust us to keep your buildings in top condition.</p>
                                 </div>
                             </div>
                             <div class="owl-item">
                                 <div class="industries-carousel-boxs">
                                     <h3 style="color: var(--color);"><span>Predictive maintenance</span></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dolorum labore
-                                        doloribus corporis corrupti dolore perferendis odio obcaecati voluptatum nobis,
-                                        iusto quae, sequi optio quisquam, illo nisi ducimus consequuntur nihil!</p>
+                                    <p>Thomson Constructions specializes in predictive maintenance, leveraging advanced techniques to anticipate and prevent potential issues before they occur. Trust us to keep your properties running smoothly and minimize downtime with our proactive approach to maintenance.</p>
                                 </div>
                             </div>
                         </div>
