--- a/project-management.html
+++ b/project-management.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Thomson Builders</title>
-    <meta name="description" content="meta description here">
+    <title>Comprehensive Project Maintenance Solutions by Thomson Constructions in Coimbatore</title>
+    <meta name="description" content="Thomson Constructions offers comprehensive project maintenance services in Coimbatore to ensure the longevity and functionality of your properties. From routine upkeep to emergency repairs, trust us to keep your projects in optimal condition.">
 
     <!-- Favicon  -->
 
@@ -251,9 +251,7 @@
             <div class="website-serve-title text-center mb-4">
                 <h2>Thomson Construction <span> Best Services </span>
                 </h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam odit iusto magni explicabo iure
-                    asperiores earum iste. Sunt debitis suscipit ratione ut quasi non perferendis, nisi cupiditate eos,
-                    laborum sapiente?</p>
+                <p>At Thomson Constructions, we pride ourselves on being the go-to construction company in Coimbatore for commercial projects.</p>
             </div>
             <div class="website-serve-contents gap-4 website-serve-contents2">
                 <a href="residential.html" class="website-serve-boxs website-serve-boxs2">
@@ -334,12 +332,7 @@
                     </button>
                 </div>
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, dolore. Accusantium quo, illo
-                    ipsam id vitae, rem amet distinctio aliquid praesentium tempore eum fugiat ipsa inventore assumenda
-                    earum reprehenderit? Asperiores itaque accusamus repellat molestiae similique! Veniam est quas
-                    libero! Commodi esse, tenetur adipisci suscipit nemo natus iure incidunt dolore dolorum laborum
-                    necessitatibus nisi reiciendis excepturi veritatis ad, enim quod voluptatem qui harum minus
-                    consectetur nostrum quo? Illum, minima. Dolor obcaecati deserunt esse consequuntur nulla.</p>
+                <p>Welcome to Thomson Constructions, your trusted partner for project maintenance solutions in Coimbatore. With our dedicated team of experts, we offer a wide range of services to address all your maintenance needs, ensuring your projects remain in top condition year-round. Our project maintenance services cover everything from regular inspections and preventive maintenance to emergency repairs and renovations. Whether it's a residential, commercial, or institutional project, we have the knowledge and resources to keep it running smoothly.</p>
                 <ul>
                     <li>Best Services</li>
                     <li>Warranty</li>
@@ -503,9 +496,7 @@
         <div class="hire-choosing-container container">
             <div class="hire-choosing-title">
                 <h2>Why Choose <span>Thomson Construction</span></h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia repellendus accusamus autem ipsa
-                    aliquam nulla at tempora cumque, tenetur impedit fuga quis aspernatur optio id illum excepturi et
-                    commodi fugiat.</p>
+                <p>Choose Thomson Constructions in Coimbatore for unrivalled expertise and a commitment to exceeding your expectations. Experience superior quality, reliability, and personalized service tailored to your construction needs.</p>
             </div>
             <div class="hireChoose-box-container">
                 <div class="hireChoose-box">
@@ -565,25 +556,25 @@
                                 <div class="industries-carousel-boxs">
                                     <h3 style="color: var(--color);"><span>
                                         Heavy civil projects</span></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dolorum labore doloribus corporis corrupti dolore perferendis odio obcaecati voluptatum nobis, iusto quae, sequi optio quisquam, illo nisi ducimus consequuntur nihil!</p>
+                                    <p>Thomson Constructions specializes in heavy civil projects, delivering robust infrastructure solutions with precision and expertise. From highways and bridges to dams and airports, trust us for reliable construction services that withstand the test of time.</p>
                                 </div>
                             </div>
                             <div class="owl-item">
                                 <div class="industries-carousel-boxs">
                                     <h3 style="color: var(--color);"><span> Institutional projects</span></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dolorum labore doloribus corporis corrupti dolore perferendis odio obcaecati voluptatum nobis, iusto quae, sequi optio quisquam, illo nisi ducimus consequuntur nihil!</p>
+                                    <p>Thomson Constructions excels in institutional projects, crafting functional and inspiring spaces that empower learning, innovation, and community engagement. From schools and universities.</p>
                                 </div>
                             </div>
                             <div class="owl-item">
                                 <div class="industries-carousel-boxs">
                                     <h3 style="color: var(--color);"><span>Commercial project</span></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dolorum labore doloribus corporis corrupti dolore perferendis odio obcaecati voluptatum nobis, iusto quae, sequi optio quisquam, illo nisi ducimus consequuntur nihil!</p>
+                                    <p>Thomson Constructions specializes in commercial projects, delivering innovative and functional spaces that drive business success. From office buildings and retail complexes to hospitality venues and industrial facilities,</p>
                                 </div>
                             </div>
                             <div class="owl-item">
                                 <div class="industries-carousel-boxs">
                                     <h3 style="color: var(--color);"><span>Industrial construction projects</span></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dolorum labore doloribus corporis corrupti dolore perferendis odio obcaecati voluptatum nobis, iusto quae, sequi optio quisquam, illo nisi ducimus consequuntur nihil!</p>
+                                    <p>Thomson Constructions excels in industrial commercial projects, providing robust solutions that combine functionality with efficiency. From warehouses and manufacturing plants to distribution centers and logistics facilities.</p>
                                 </div>
                             </div>
                         </div>
